--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "devDependencies": {
     "@angablue/eslint-config": "^1.4.1",
     "@types/node": "^18.11.7",
+    "dotenv": "^16.0.3",
     "prettier": "^2.7.1",
     "typedoc": "^0.23.18",
+    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "*"
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "copy-paste": "^1.3.0",
-    "dotenv": "^16.0.3"
+    "axios": "^1.1.3"
   },
   "scripts": {
     "build": "tsc && typedoc src/index.ts --name Instagram-User-API-Wrapper",
