--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "instagram-user-api-wrapper",
   "version": "1.0.0",
   "description": "An Api wrapper around the Instagram API made with TypeScript.",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
   "repository": "https://github.com/Mub1532/twitch-api-graphql",
   "author": "Mub1532",
   "license": "MIT",
